force-app/main/default/objects/Application_Email_History__c/Application_Email_History__c.object-meta.xml
<CustomObject>
    <label>Application Email History</label>
    <nameField>
        <label>Application Email History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Emails History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>