force-app/main/default/objects/Application_Email_History__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>deapp__Applicant__c</referenceTo>
    <relationshipLabel>Application Emails History</relationshipLabel>
    <relationshipName>Application_Emails_History</relationshipName>
    <type>Lookup</type>
</CustomField>