force-app/main/default/objects/Application_Email_History__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <label>Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>