force-app/main/default/objects/Application_Email_History__c/fields/Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_Code__c</fullName>
    <label>Response Status Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>