force-app/main/default/objects/Application_Email_History__c/fields/Template_String__c.field-meta.xml
<CustomField>
    <fullName>Template_String__c</fullName>
    <label>Template String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>