force-app/main/default/objects/Application_Email_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Application__c</columns>
    <columns>Applicant_Email__c</columns>
    <columns>Template_String__c</columns>
    <columns>Date_Sent__c</columns>
    <columns>Response_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>